# slint-demo

./: Cargo.toml  build.rs  memory.x  rust-toolchain-nightly.toml
.cargo/: config.toml
src/: main.rs  st7789.rs
ui/: appwindow.slint  home_page.slint  printerdemo.slint
