[package]
name = "slint-demo"
version = "0.1.0"
authors = ["HaoboGu"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { git = "https://github.com/slint-ui/slint", default-features = false, features = [
    "compat-1-2",
    "renderer-software",
    "libm",
    "unsafe-single-threaded",
] }
embedded-alloc = "0.5.1"
embassy-time = { version = "0.3", features = ["tick-hz-32_768", "defmt"] }
embassy-stm32 = { version = "0.1", features = [
    "stm32h7b0vb",
    "defmt",
    "memory-x",
    "time-driver-any",
] }
embassy-executor = { version = "0.5", features = [
    "defmt",
    "arch-cortex-m",
    "task-arena-size-65536",
    "executor-thread",
    "integrated-timers",
] }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = { version = "0.7.3", features = ['set-vtor'] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "1"
embedded-graphics = "0.8"
embassy-sync = "0.5"
static_cell = "2"
embassy-embedded-hal = "0.1.0"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
